# fake_rpi

./: .gitignore  .landscape.yaml  .travis.yml  MIT_License.txt  example.py  pyproject.toml  readme.md  readme.rst  setup.py
.github/workflows/: python.yaml
archive/: readme.rst
fake_rpi/: Adafruit.py  Base.py  GPIO.py  PWM.py  RPi.py  __init__.py  nxp_imu.py  picamera.py  serial.py  smbus.py  wrappers.py
fake_rpi/RPi/: GPIO.py
fake_rpi/smbus/: __init__.py  smbus.py
tests/: test.py  test_fake_rpi.py
