[tool.poetry]
name = "fake_rpi"
version = "0.6.3"
description = "A bunch of fake interfaces for development when not using the RPi or unit testing"
authors = ["walchko <walchko@users.noreply.github.com>"]
readme = "readme.md"
license = "MIT"
homepage = "https://pypi.org/project/fake_rpi/"
repository = 'https://github.com/MomsFriendlyRobotCompany/fake_rpi'
# documentation = "http://..."
keywords = ['raspberry', 'pi', 'fake', 'fake_rpi', 'i2c', 'spi', 'gpio', 'serial']
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Topic :: Software Development :: Libraries',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Libraries :: Application Frameworks'
]

# [tool.poetry.scripts]
# # script_name = 'myscript:main'
# servoAX12 = "pyservos.bin.servoAX12:main"

[tool.poetry.dependencies]
python = ">=3.6"
numpy = "*"
# pyserial = "^3.4"
# colorama = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
# mypy = "*"

# [mypy-pi_servo_serial]
# ignore_missing_imports = True

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
